@startuml
' hide the spot
' hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

' Define only the entities used in this diagram
entity contact_mechanism {}
entity contact_mechanism_type {}
entity contact_mechanism_geographic_boundary {}
entity geographic_boundary {}

contact_mechanism }|..|| contact_mechanism_type
contact_mechanism }o..|| contact_mechanism_geographic_boundary

contact_mechanism_geographic_boundary }|..|| geographic_boundary
@enduml
